tests/ui/issues/issue-20939.stderr
error: hi
  --> $DIR/issue-20939.rs:3:1
   |
LL | trait Foo {}
   | --------- built-in `dyn Foo` implementation for this trait
LL |
LL | impl<'a> Foo for dyn Foo + 'a {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0371]: the object type `(dyn Foo + 'a)` automatically implements the trait `Foo`
  --> $DIR/issue-20939.rs:3:1
   |
LL | impl<'a> Foo for dyn Foo + 'a {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Foo + 'a)` automatically implements trait `Foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0371`.
